test/semantic/bad/jeffrey-test-weird7.mC
void print (char buffer[])
{
	
	
}

void add(int a[])
{
	int j;
	int i;
	i = i + j;	//should pass if no code folding.
}

int main ()
{
 int b[5];
 char buf[10];
  buf[0] = '1';
   buf[10] = 't';
 	b[2+2] = 4;
 	
    add (b);
    print (buf);
    }
